fix argument matcher and interpreter